03-reseau/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vms-to-db
  namespace: soxnaamycoulibaly-dev
spec:
  podSelector:
    matchLabels: {app: mysql}
  policyTypes: [Ingress]
  ingress:
  - from:
    - podSelector: {}
    ports: [{protocol: TCP, port: 3306}]
